# poc-docs-dbt-core

./: .gitignore  README.md  database_functions.py  logger_config.py  requirements.txt
.github/workflows/: dbt-docs.yml  wiki-sync.yml
dagster_poc/: README.md  pyproject.toml  setup.py
dagster_poc/dagster_poc/: assets.py  definitions.py  resources.py
data_catalog/: data_catalog.py  markdown_functions.py  queries.py
dbt_poc/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_poc/models/: base_events.sql  finance_report.sql  marketing_report.sql  sources.yaml  sources.yml
docs/: catalog.json  graph.gpickle  manifest.json
utilities/: database_functions.py
